2010-09-15  Jessie Berlin  <jberlin@apple.com>

Reviewed by Jon Honeycutt.

        We should save messages that can't be sent when postMessageToInjectedBundle is called and
        send them in ensureWebProcess.
        https://bugs.webkit.org/show_bug.cgi?id=45822

        * UIProcess/WebContext.cpp:
        (WebKit::WebContext::ensureWebProcess):
        Post any messages to the Injected Bundle that couldn't be sent earlier because the
        WebProcess hadn't been initialized yet.
        (WebKit::WebContext::postMessageToInjectedBundle):
        * UIProcess/WebContext.h:


Canonical link: https://commits.webkit.org/58317@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@67593 268f45cc-cd09-0410-ab3c-d52691b4dbfc